WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134440
U16_IS_SURROGATE should not be called with a UChar32
https://bugs.webkit.org/show_bug.cgi?id=134440
Summary
U16_IS_SURROGATE should not be called with a UChar32
Myles C. Maxfield
Reported
2014-06-29 21:58:35 PDT
U16_IS_SURROGATE should not be called with a UChar32
Attachments
Patch
(1.43 KB, patch)
2014-06-29 21:59 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2014-06-29 21:59:40 PDT
Created
attachment 234066
[details]
Patch
WebKit Commit Bot
Comment 2
2014-06-30 08:13:51 PDT
Comment on
attachment 234066
[details]
Patch Clearing flags on attachment: 234066 Committed
r170584
: <
http://trac.webkit.org/changeset/170584
>
WebKit Commit Bot
Comment 3
2014-06-30 08:13:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug