U16_IS_SURROGATE should not be called with a UChar32 https://bugs.webkit.org/show_bug.cgi?id=134440

Reviewed by Darin Adler.

No new tests because there is no behavior change.

* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::advanceByCombiningCharacterSequence):


Canonical link: https://commits.webkit.org/152421@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170584 268f45cc-cd09-0410-ab3c-d52691b4dbfc